feat: adicionando autenticacao nas rotas usando token jwt
