# api/routes/produtosRoute.js
@@ -4,10 +4,10 @@ const ProdutoController = require('../controllers/produtoController')
 const router = Router()
 
 router
-  .post('/', ProdutoController.cadastrarProduto)
-  .get('/', ProdutoController.buscarTodosProdutos)
-  .get('//id/:id', ProdutoController.buscarProdutoPorId)
-  .delete('//id/:id', ProdutoController.deletarProdutoPorId)
-  .put('//id/:id', ProdutoController.editarProduto)
+  .post('/cadastrar', ProdutoController.cadastrarProduto)
+  .get('/buscar/todos', ProdutoController.buscarTodosProdutos)
+  .get('/buscar/id/:id', ProdutoController.buscarProdutoPorId)
+  .delete('/deletar/id/:id', ProdutoController.deletarProdutoPorId)
+  .put('/editar/id/:id', ProdutoController.editarProduto)
 
 module.exports = router
